--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,10 +6,10 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<meta content="" name="description" />
 	<meta content="" name="author" />
-	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-	<script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+	<script src="/javascripts/bootstrap.min.js"></script>
 	<script src="http://apps.bdimg.com/libs/angular.js/1.2.15/angular.min.js" type="text/javascript"></script>
         <link rel='stylesheet' href='/stylesheets/bootstrap.css'>
         <link rel='stylesheet' href='/stylesheets/bootstrap-responsive.css'>
